[package]
name = "demo"
version = "0.1.0"
authors = ["John Peel <john@dgby.org>"]
edition = "2018"

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]

[dependencies]
bincode = "1.3.3"
nom = "6.1.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_with = "1.9.3"
bytes = "1.0.1"
protobuf = "2.24.1"

[build-dependencies]
protoc-rust = "2.24.1"
