[package]
name = "demo"
version = "0.1.0"
authors = ["John Peel <john@dgby.org>"]
edition = "2018"

[features]
default = ["protoc"]

protoc = ["protoc-rust"]
pure = ["protobuf-codegen-pure"]

[dependencies]
bincode = "1.3.3"
nom = "6.1.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_with = "1.9.3"
bytes = "1.0.1"
protobuf = { version = "2.24.1", features = ["with-serde"] }

[build-dependencies]
protoc-rust = { version = "2.24.1", optional = true }
protobuf-codegen-pure = { version = "2.24.1", optional = true }
